# googlesearch-ba

./: README.md  pyproject.toml
src/googlesearch_ba/: __init__.py  newmodule.py  rss_set.py
